fix overflowing text in dropdown menus

--- a/web/cobrands/tfl/_colours.scss
+++ b/web/cobrands/tfl/_colours.scss
@@ -69,7 +69,7 @@ $header-top-border: false;
 @mixin tflfield {
   border: 1px solid $dark;
   border-radius: 2px;
-  padding: 0.58em;
+  padding: 0.4em;
   font-family: $body-font;
   background-color: $white;
   box-shadow: none;
